# pb2dict

./: .gitignore  README.md  setup.cfg
pb2dict/: __init__.py
tests/: test_message.py
tests/proto/: message.proto  message_pb2.py  message_pb2.pyi
