[metadata]
name = pb2dict
version = 1.0.0
author = Quick Vectors
author_email = felipe@qvecs.com
description = Protobuf to dictionary converter.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/qvecs/pb2dict
project_urls =
    Source Code = https://github.com/qvecs/pb2dict
    Bug Tracker = https://github.com/qvecs/pb2dict/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    protobuf

[options.extras_require]
dev =
    pytest
